fix(GroupService): 检查并修改了 GroupService 中的所有方法 检查并修改了 GroupService 中的所有方法。